--- a/Signup/signup_style.css
+++ b/Signup/signup_style.css
@@ -38,27 +38,6 @@ body {
   z-index: 0;
 }
 
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 10px;
-}
-
-.nav img {
-  margin-left: 1.7vw;
-  height: auto;
-  width: 70px;
-}
-
-.nav a {
-  text-decoration: none;
-  font-family: monospace;
-  padding: 15px 30px;
-  margin-right: 20px;
-  color: white;
-}
-
 .form_panel {
   background-color: white;
   border-radius: 10px;
@@ -68,7 +47,7 @@ body {
 }
 
 .innerpanel {
-  margin: 30px 40px;
+  margin: 30px 30px;
   width: fit-content;
   height: fit-content;
 }
@@ -78,6 +57,7 @@ body {
   font-size: 24px;
   font-family: sans-serif;
   margin-left: 10px;
+  margin-bottom: 5px;
 }
 
 .features {
@@ -95,18 +75,17 @@ body {
 .feat1 img,
 .feat2 img,
 .feat3 img {
-  height: 50px;
+  height: 40px;
   width: auto;
 }
 
 .feat1,
 .feat2 {
-  margin-right: 30px;
+  margin-right: 10px;
 }
 
 .signup {
   text-align: center;
-  margin-top: 20px;
   font-size: 35px;
   font-weight: bolder;
   font-family: sans-serif;
@@ -114,7 +93,7 @@ body {
 
 .form {
   width: 100%;
-  margin: 0 auto;
+  margin: 0 0;
 }
 
 .field {
@@ -125,16 +104,19 @@ body {
 label[for="mail"],
 input[type="text"] {
   transition: all 200ms ease;
+  z-index: 1;
 }
 
 input[type="text"] {
-  font-size: 24px;
+  font-size: 15px;
   border: 0;
   border-bottom: 1px solid #ccc;
   -webkit-appearance: none;
   border-radius: 0;
   margin-bottom: 10px;
   padding: 5px 0;
+  font-weight: 500;
+
   &:focus {
     outline: 0;
     border-color: rgb(0, 0, 0);
@@ -145,18 +127,20 @@ input[type="text"] {
     overflow: hidden;
     text-overflow: ellipsis;
     transform-origin: left bottom;
-    transform: translate(0, 2.125em) scale(1.5);
+    transform: translate(0, 3.125em) scale(2);
+    padding-bottom: 3px;
   }
   &:not(:placeholder-shown) + label[for="mail"],
   &:focus + label[for="mail"] {
     transform: translate(0, 0) scale(1);
     cursor: default;
     color: rgb(0, 0, 0);
+    padding-bottom: 0;
   }
 }
 
 label[for="mail"] {
-  max-width: 66.666%;
+  max-width: max-content;
   color: #ccc;
 }
 
@@ -184,16 +168,34 @@ button:hover {
 
 .why {
   text-decoration: none;
-  font-size: medium;
+  font-size: small;
 }
-
+.content {
+  font-family: default;
+}
 .TnC {
   width: 100%;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   border-bottom: 1px solid rgb(100, 98, 98);
-  font-size: small;
+  font-size: 10px;
+}
+.TnC p {
+  margin: 0 auto;
 }
 
 .TnC p a {
   text-decoration: none;
+}
+
+.login {
+  margin-top: 5px;
+  font-size: medium;
+}
+
+@media screen and (max-width: 768px) {
+  .form_panel {
+    background-color: white;
+    border-radius: 10px;
+    margin: auto auto;
+  }
 }
