--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,40 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .card {
+    background: radial-gradient(
+          circle at 100% 100%,
+          #ffffff 0,
+          #ffffff 3px,
+          transparent 3px
+        )
+        0% 0%/8px 8px no-repeat,
+      radial-gradient(circle at 0 100%, #ffffff 0, #ffffff 3px, transparent 3px)
+        100% 0%/8px 8px no-repeat,
+      radial-gradient(circle at 100% 0, #ffffff 0, #ffffff 3px, transparent 3px)
+        0% 100%/8px 8px no-repeat,
+      radial-gradient(circle at 0 0, #ffffff 0, #ffffff 3px, transparent 3px)
+        100% 100%/8px 8px no-repeat,
+      linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 10px)
+        calc(100% - 16px) no-repeat,
+      linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 16px)
+        calc(100% - 10px) no-repeat,
+      linear-gradient(90deg, #48abe0 0%, transparent 100%);
+    border-radius: 8px;
+    padding: 9px;
+    box-sizing: content-box;
+  }
+}
+
 @layer utilities {
-    .bg-gradient {
-      @apply ;
-    }
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
