--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,19 @@
     padding: 9px;
     box-sizing: content-box;
   }
+
+  .shad {
+    -webkit-box-shadow: 0px 0px 7px 8px rgba(255,255,255,0.9);
+-moz-box-shadow: 0px 0px 7px 8px rgba(255,255,255,0.9);
+box-shadow: 0px 0px 7px 8px rgba(255,255,255,0.9);
+  }
+  .glass {
+    background: rgba(255, 255, 255, 0);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+  }
 }
 
 @layer utilities {
