--- a/src/index.css
+++ b/src/index.css
@@ -30,16 +30,21 @@
   }
 
   .shad {
-    -webkit-box-shadow: 0px 0px 7px 8px rgba(255,255,255,0.9);
--moz-box-shadow: 0px 0px 7px 8px rgba(255,255,255,0.9);
-box-shadow: 0px 0px 7px 8px rgba(255,255,255,0.9);
+    -webkit-box-shadow: 0px 0px 7px 8px rgba(255, 255, 255, 0.9);
+    -moz-box-shadow: 0px 0px 7px 8px rgba(255, 255, 255, 0.9);
+    box-shadow: 0px 0px 7px 8px rgba(255, 255, 255, 0.9);
   }
   .glass {
-    background: rgba(255, 255, 255, 0);
+    background: rgba(255, 255, 255, 0.4);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
+  }
+  .black-shad {
+    -webkit-box-shadow: 5px 5px 10px -7px rgba(0, 0, 0, 1);
+    -moz-box-shadow: 5px 5px 10px -7px rgba(0, 0, 0, 1);
+    box-shadow: 5px 5px 10px -7px rgba(0, 0, 0, 1);
   }
 }
 
