channels minor changes

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@
     );
   }
 
+  .glass {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(20px);
+  }
+
   .shad {
     -webkit-box-shadow: 0px 0px 7px 8px rgba(255, 255, 255, 0.9);
     -moz-box-shadow: 0px 0px 7px 8px rgba(255, 255, 255, 0.9);
@@ -31,9 +38,9 @@
   }
 
   .grey-shad {
-    -webkit-box-shadow: -2px 1px 32px -3px rgba(168,168,168,1);
-    -moz-box-shadow: -2px 1px 32px -3px rgba(168,168,168,1);
-    box-shadow: -2px 1px 32px -3px rgba(168,168,168,1);
+    -webkit-box-shadow: -2px 1px 32px -3px rgba(168, 168, 168, 1);
+    -moz-box-shadow: -2px 1px 32px -3px rgba(168, 168, 168, 1);
+    box-shadow: -2px 1px 32px -3px rgba(168, 168, 168, 1);
   }
 }
 
