--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,12 @@
     backdrop-filter: blur(20px);
   }
 
+  .break-word {
+    word-wrap: break-word;
+    overflow-wrap: break-word; 
+    hyphens: auto;
+  }
+
   .shad {
     -webkit-box-shadow: 0px 0px 7px 8px rgba(255, 255, 255, 0.9);
     -moz-box-shadow: 0px 0px 7px 8px rgba(255, 255, 255, 0.9);
